$Id: History,v 1.13 2001-07-25 21:14:48 johna Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

History file for visualization/modeling
---------------------------------------

25th July 2001  John Allison  (modeling-V03-02-03)
- Added G4VModel::GetG4PhysicalVolumeModel().
- Added G4VModel* argument to G4BoundingSphereScene constructor.
  Both the above are to facilitate access to a model, if it exists, and
  to invoke methods of G4PhysicalVolumeModel if it is one.
- Added code to curtail G4PhysicalVolumeModel search in G4BoundingSphereScene.

24th July 2001  John Allison  (modeling-V03-02-02)
- Added G4VModel::SetExtent(const G4VisExtent&).
- Cosmetic improvements to G4BoundingSphereScene.
- Augmented G4ScaleModel::fGlobalTag.

21st July 2001  John Allison  (modeling-V03-02-01)
- Added G4ScaleModel.
- Fixed bug in G4BoundingSphereScene::::Accrue().
- Also a few cosmetic changes.

18th July 2001  John Allison  (modeling-V03-02-00)
- Ensured rotation and translation of replica is restored.

3rd February 2001  John Allison  (vis-V03-00-02)
- Tidied for CodeWizard.

29th May 2000  John Allison
- Moved code for maintaining depth, physical and logical volume