@@ -1,4 +1,4 @@
-$Id: History,v 1.13 2001-07-25 21:14:48 johna Exp $
+$Id: History,v 1.14 2001-08-09 20:07:00 johna Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -19,6 +19,11 @@ committal in the CVS repository !
 
 History file for visualization/modeling
 ---------------------------------------
+
+9th August 2001  John Allison  (vis-V03-02-10-00)
+- Removed G4ModelingParameters::hierarchy.  It is no longer used.  The
+  textual or graphical representation of the geometry hierarchy is now
+  done in G4xxxTree classes in visua;ization/Tree.
 
 25th July 2001  John Allison  (modeling-V03-02-03)
 - Added G4VModel::GetG4PhysicalVolumeModel().
